<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="@dimen/margin_app"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_label_name" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_marginTop="@dimen/vertical_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_label_surname" />

        <EditText
            android:id="@+id/inputSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/actionSave"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:text="@string/form_label_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        </LinearLayout>

</ScrollView>